--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cute+Font&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 98vh;
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
 }
 
 #calculator{
@@ -13,69 +17,57 @@ body {
     flex-direction: column;
     width: 500px;
     height: 700px;
-    border: solid black 1px;
     border-radius: 15px;
+    box-shadow: 
+        inset 10px 10px #DCDCDC,
+        inset -10px -10px #CDCDCD;
 }
 
 #display{
-    background-color: gray;
+    font-family: 'Cute Font', sans-serif;
+    background-color: darkgreen;
+    color: greenyellow;
+    box-shadow: inset 5px 4px #004400;
     display: flex;
-    height: 15%;
-    width: 80%;
-    flex-direction: column;
-    align-items: flex-end;
+    height: 159px;
+    width: 90%;
+    justify-content: flex-end;
     padding: 5%;
     font-size: 100px;
-    border: solid black 2px;
-    border-radius: 30px;
+    border: solid black 3px;
+    border-radius: 50px;
+    box-sizing: border-box;
 }
 
 #keyboard {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     height: 60%;
     width: 90%;
 }
 
-#keyboard-left {
-    display: flex;
-    flex: 1 1 auto;
-    flex-wrap: wrap;
-    width: 75%;
-    justify-content: center;
-    align-items: center;
+#equals {
+    grid-row: auto/span 2;
 }
 
-#keyboard-left button {
-    margin: 1%;
-    height: 20%;
-    min-width: 30%;
+#all-clear, #equals {
+    background-color: gray;
+    color: white
 }
 
-#button-0, #equals {
-    flex-grow: 2;
+#backspace, #decimal, .operator {
+    background-color: lightgray;
 }
 
-#decimal {
-    max-width: 33%;
-}
-
-#keyboard-right {
-    display: flex;
-    flex: 1 1 auto;
-    flex-wrap: wrap;
-    flex-direction: column;
-    width: 25%;
-    justify-content: center;
-    align-items: center;
-}
-
-#keyboard-right button {
-    margin: 1% 3%;
-    height: 18%;
-    width: 94%;
+#button-0 {
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 button {
+    font-family: 'Courier Prime', monospace;
+    box-shadow: 1px 1px 1px 1px black;
     box-sizing: border-box;
     font-size: 50px;
+    margin: 2px;
 }
