--- a/style.css
+++ b/style.css
@@ -28,14 +28,17 @@ body {
     font-family: 'Cute Font', sans-serif;
     background-color: darkgreen;
     color: greenyellow;
-    box-shadow: inset 5px 4px #004400;
+    box-shadow: inset 8px 7px #004400;
     display: flex;
     height: 159px;
     width: 90%;
     justify-content: flex-end;
     padding: 5%;
     font-size: 100px;
-    border: solid black 3px;
+    border-top: solid #cdcdcd 5px;
+    border-left: solid #cdcdcd 5px;
+    border-bottom: solid #dcdcdc 5px;
+    border-right: solid #dcdcdc 5px;
     border-radius: 50px;
     box-sizing: border-box;
 }
@@ -52,12 +55,18 @@ body {
 }
 
 #all-clear, #equals {
-    background-color: gray;
+    background-color: #808080;
+    box-shadow: 
+        inset 7px 7px #898989,
+        inset -7px -7px #7a7a7a;
     color: white
 }
 
 #backspace, #decimal, .operator {
-    background-color: lightgray;
+    background-color: #d3d3d3;
+    box-shadow: 
+        inset 7px 7px #dcdcdc,
+        inset -7px -7px #cdcdcd;
 }
 
 #button-0 {
@@ -71,4 +80,11 @@ button {
     box-sizing: border-box;
     font-size: 50px;
     margin: 2px;
+}
+
+.number {
+    background-color: #f6f6f6;
+    box-shadow: 
+        inset 7px 7px #ffffff,
+        inset -7px -7px #f0f0f0;
 }
